# path-value

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs
src/path/: mod.rs  path.pest
src/value/: de.rs  mod.rs  ser.rs
